# stuff

./: README.md  ipynb_diff_tool.sh  pyproject.toml
.github/workflows/: blank.yml  conditional_action.yaml  test_bump.yaml
test/: markdown.md
